- replaced more-info page with about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,53 @@
-<h4>About</h4>
+<h4>About Whitespace Platform</h4>
+
+<div class="row">
+  <div class="col-md-12 text-center">
+    <div id="whitespace-is" class="carousel slide well well-sm">
+      <ol class="carousel-indicators">
+        <li data-target="#whitespace-is" data-slide-to="0" class="active"></li>
+        <li data-target="#whitespace-is" data-slide-to="1"></li>
+        <li data-target="#whitespace-is" data-slide-to="2"></li>
+        <li data-target="#whitespace-is" data-slide-to="3"></li>
+        <li data-target="#whitespace-is" data-slide-to="0"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="item active">
+          <%= image_tag 'carousel_workflow.png' %>
+          <div class="carousel-caption">
+            <!--<h3>Workflow</h3>-->
+          </div>
+        </div>
+        <div class="item">
+          <%= image_tag 'carousel_solving_problems.png' %>
+          <div class="carousel-caption">
+            <!--<h3>Solving problems</h3>-->
+          </div>
+        </div>
+        <div class="item">
+          <%= image_tag 'carousel_flat_structure.png' %>
+          <div class="carousel-caption">
+            <!--<h3>Flat structure</h3>-->
+          </div>
+        </div>
+        <div class="item">
+          <%= image_tag 'carousel_reusable_solutions.png' %>
+          <div class="carousel-caption">
+            <!--<h3>Reusable solutions</h3>-->
+          </div>
+        </div>
+        <div class="item">
+          <%= image_tag 'carousel_target_local.png' %>
+          <div class="carousel-caption">
+            <!--<h3>Target local</h3>-->
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#whitespace-is" data-slide="prev">
+        <span class="icon-prev"></span>
+      </a>
+      <a class="right carousel-control" href="#whitespace-is" data-slide="next">
+        <span class="icon-next"></span>
+      </a>
+    </div>
+  </div>
+</div>
