--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,7 +5,7 @@
       <p>Join our community to solve problems for social good.
         <%= link_to 'Sign up', 'users/signup', :class => 'btn-link' %>,
         <%= link_to 'Login', 'users/login', :class => 'btn-link' %> or
-        <%= link_to 'Learn More', 'more-info', :class => 'btn-link' %>.
+        <%= link_to 'Learn More', about_path, :class => 'btn-link' %>.
       </p>
     </div>
   </div>
