--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,5 +1,6 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
+<div class="well">
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
      <%= devise_error_messages! %>
 
@@ -27,5 +28,6 @@
 
      <div><%= f.submit 'Update' %></div>
 <% end %>
+</div>
 
 <%= link_to 'Back', :back %>
