--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,5 +1,6 @@
 <h2>Signup</h2>
 
+<div class="well">
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-horizontal'}) do |f| %>
      <%= devise_error_messages! %>
 
@@ -42,5 +43,6 @@
     </div>
 
 <% end %>
+</div>
 
 <%= render 'users/shared/links' %>
