--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -25,6 +25,7 @@
 <br/>
 <br/>
 
-<div>
+<ol class="phases project-phases timeline list-unstyled">
+  <li class="timeline-axis"></li>
   <%= render partial: 'phases/phase', :collection => @project.phases, :as => :phase %>
-</div>
+</ol>
