--- a/app/views/resources/_resource.html.erb
+++ b/app/views/resources/_resource.html.erb
@@ -4,7 +4,7 @@
   <span class="resource-description"><%= resource.description unless resource.nil? %></span>
   <span class="resource-type"><%= "(#{resource.type})" unless resource.nil? %></span>
   <span class="resource-url"><%= link_to resource.url, resource.url, target: '_blank' unless resource.nil? %></span>
-  <span class="resource-votes"><%= "(#{resource.plusminus})" %></span>
+  <span class="resource-votes"><%#= "(#{resource.plusminus})" %></span>
   <span class="resource-vote-up"><%=
       if user_signed_in? && !current_user.voted_on?(resource) && resource.user != current_user
         link_to('+', vote_up_resource_path(resource), :remote => true, :method => :post)
