--- a/app/views/phases/show.html.erb
+++ b/app/views/phases/show.html.erb
@@ -4,6 +4,6 @@
   <li class="active"><%= @phase.name %></li>
 </ol>
 
-<ul>
+<ul class="phases timeline list-unstyled">
     <%= render partial: 'phases/phase', :locals => { :phase => @phase } %>
 </ul>
