--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,9 +33,6 @@ h3 > .badge {
   margin-left: auto;
 }
 
-.add {
-}
-
 
 .clear:after,
 hr:after {
@@ -45,8 +42,6 @@ hr:after {
   clear: both;
   visibility: hidden;
 }
-
-.panel > .panel-body:empty {display:none;}
 
 .thumbnail > img {
   max-width: 50px;
@@ -81,7 +76,7 @@ hr:after {
   position: relative;
 
   > .timeline-axis {
-    border-left: 4px solid #a8eacb;
+    border-left: 4px solid #79dfaf;
 
     position: absolute;
     left: 0;
@@ -96,21 +91,24 @@ hr:after {
     padding-left: 1.8em;
 
     hr.phase-separator {     // todo: swap to border-top
-      border-top: 1px solid #a8eacb;
+      border-top: 1px solid #79dfaf;
       margin-left: -1.6em;
       margin-right: -1.6em;
     }
 
     h3 {
       position: relative;
-      color: #a8eacb;
+      color: #79dfaf;
+
+      > a, > a:link, > a:visited {color: #79dfaf}
+      > a:hover, > a:active {color: #999}
 
       .phase-icon {
         position: absolute;
-        top: 0em;
+        top: 0;
         left: -1.5em;
 
-        color: #a8eacb;
+        color: #79dfaf;
         background: white;
       }
     }
@@ -121,7 +119,7 @@ hr:after {
   position: relative;
 
   > .timeline-axis {
-    border-left: 1px solid #b6e5f5;
+    border-left: 1px dashed #71ccec;
 
     position: absolute;
     left: 0;
@@ -133,18 +131,24 @@ hr:after {
   }
 
   .idea {
-    padding-left: 1.4em;
+    a, a:link, a:visited, a:hover, a:active {color: #999}
+    padding-left: 1em;
 
     h4 {
       position: relative;
+      color: #71ccec;
+
+      > a, > a:link, > a:visited {color: #71ccec}
+      > a:hover, > a:active {color: #999}
 
       .idea-icon {
         position: absolute;
-        top: 0em;
-        left: -1.5em;
-
-        color: #b6e5f5;
+        top: 0;
+        left: -2.5em;
+        color: #71ccec;
         background: white;
+        padding-top: 4px;
+        margin-top: -4px;
       }
     }
   }
@@ -154,7 +158,7 @@ hr:after {
   position: relative;
 
   > .timeline-axis {
-    border-left: 1px dotted #eaaaa8;
+    border-left: 1px dotted #df7c79;
 
     position: absolute;
     left: 0;
@@ -166,19 +170,62 @@ hr:after {
   }
 
   .comment {
-    padding-left: 1.4em;
+    a, a:link, a:visited, a:hover, a:active {color: #999}
+    padding-left: 1em;
 
     p {
       position: relative;
-      color: #eaaaa8;
+      color: #df7c79;
 
       .comment-icon {
         position: absolute;
-        top: 0em;
-        left: -1.8em;
-
-        color: #eaaaa8;
+        top: 0;
+        left: -4.15em;
+        color: #df7c79;
         background: white;
+        padding-top: 2px;
+        margin-top: -2px;
+        padding-bottom: 2px;
+      }
+    }
+  }
+}
+
+.resources {
+  position: relative;
+
+  > .timeline-axis {
+    border-left: 1px dotted #df7c79;
+
+    position: absolute;
+    left: 0;
+    top: 0;
+
+    display: block;
+    width: 0;
+    height: 100%;
+  }
+
+  .resource {
+    a, a:link, a:visited, a:hover, a:active {color: #999}
+    padding-left: 1em;
+
+    h5 {
+      position: relative;
+      color: rosybrown;
+
+      > a, > a:link, > a:visited {color: rosybrown}
+      > a:hover, > a:active {color: #999}
+
+      .resource-icon {
+        position: absolute;
+        top: 0;
+        left: -3.15em;
+        color: rosybrown;
+        background: white;
+        padding-top: 2px;
+        margin-top: -2px;
+        padding-bottom: 2px;
       }
     }
   }
