Added two different types of dashes.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -213,7 +213,7 @@ hr:after {
   position: relative;
 
   > .timeline-axis {
-    border-left: 1px dotted #df7c79;
+    border-left: 1px dashed rosybrown;
 
     position: absolute;
     left: 0;
