--- a/app/views/ideas/_idea.html.erb
+++ b/app/views/ideas/_idea.html.erb
@@ -2,7 +2,7 @@
   <!--<%= link_to image_tag('user@2x.png'), user_path(idea.user), {:class => 'idea-user thumbnail pull-left'} %>-->
 
   <h4>
-    <%= link_to idea.text, project_phase_idea_path(idea.phase.project, idea.phase, idea) %>
+    <%= link_to idea.text, project_phase_idea_path(idea.phase.project, idea.phase, idea) %> -
     <small><%= link_to idea.user.email, user_path(idea.user) %></small>
     <span class="idea-votes">
       <small class="idea-vote-for"><%= idea.votes_for %></small>
