--- a/app/views/ideas/_idea.html.erb
+++ b/app/views/ideas/_idea.html.erb
@@ -6,8 +6,16 @@
     <small><%= link_to idea.user.email, user_path(idea.user) %></small>
     <span class="idea-votes">
       <small class="idea-vote-for"><%= idea.votes_for %></small>
-      <small class="idea-vote-up"><%= link_to(image_tag('thumb_up.png'), vote_up_project_phase_idea_path(idea.phase.project, idea.phase, idea), :remote => true, :method => :post) %></small>
-      <small class="idea-vote-down"><%= link_to(image_tag('thumb_down.png'), vote_down_project_phase_idea_path(idea.phase.project, idea.phase, idea), :remote => true, :method => :post) %></small>
+      <small class="idea-vote-up">
+        <%= link_to(vote_up_project_phase_idea_path(idea.phase.project, idea.phase, idea), :remote => true, :method => :post) do %>
+          <i class="icon-thumbs-up"></i>
+        <% end %>
+      </small>
+      <small class="idea-vote-down">
+        <%= link_to(vote_down_project_phase_idea_path(idea.phase.project, idea.phase, idea), :remote => true, :method => :post) do %>
+          <i class="icon-thumbs-down"></i>
+        <% end %>
+      </small>
     </span>
     <span class="idea-icon icon-bug"></span>
   </h4>
