--- a/app/views/projects/_phase.html.erb
+++ b/app/views/projects/_phase.html.erb
@@ -1,49 +1,45 @@
-<% if phase.completed? %>
-     <button type="button" class="btn btn-default" style="background-color:#6E6E6E;width:<%= 1 / phase.project.phases.count.to_f * 100 %>%">
-       <%= link_to phase.name, project_phase_path(phase.project, phase), remote: true %>
-       <ol class="list-inline" style="position:relative;top:-26px;">
-         <%
-            started = phase.started_at.to_i
-            last = phase.ideas.sort_by{|i| i.created_at}.last.created_at.to_i
-            duration = (last - started) > 60*60*24*30 ? last - started : 60*60*24*30
-         %>
-         <% phase.ideas.each do |idea| %>
-              <li title="<%= idea.text %>"
-                  style="opacity:0.5;padding:0;margin:0;background-color:#cc0000;min-width:3px;height:50px;position:absolute;bottom: 0;left:<%= (idea.created_at.to_i.to_f - started.to_f) / duration.to_f * 100 %>%">
-              </li>
-              <% idea.comments.each do |comment| %>
-                   <li title="<%= comment.text %>"
-                       style="opacity:0.5;padding:0;margin:0;background-color:seagreen;min-width:2px;height:30px;position:absolute;bottom: 0;left:<%= (comment.created_at.to_i.to_f - started.to_f) / duration.to_f * 100 %>%">
-                   </li>
-              <% end %>
-         <% end %>
-       </ol>
-     </button>
-<% elsif phase.started? %>
-     <button type="button" class="btn btn-default" style="height:34px;width:<%= 1 / phase.project.phases.count.to_f * 100 %>%">
-       <%= link_to phase.name, project_phase_path(phase.project, phase), remote: true %>
-       <ol class="list-inline" style="position:relative;top:-26px;">
-         <%
-            unless phase.ideas.empty?
-              started = phase.started_at.to_i
-              last = phase.last_idea.created_at.to_i
-              duration = (last - started) > 60*60*24*30 ? last - started : 60*60*24*30
-            end
-          %>
-         <% phase.ideas.each do |idea| %>
-              <li title="<%= idea.text %>"
-                  style="opacity:0.5;padding:0;margin:0;background-color:#cc0000;min-width:3px;height:50px;position:absolute;bottom: 0;left:<%= (idea.created_at.to_i.to_f - started.to_f) / duration.to_f * 100 %>%">
-              </li>
-              <% idea.comments.each do |comment| %>
-                   <li title="<%= comment.text %>"
-                       style="opacity:0.5;padding:0;margin:0;background-color:seagreen;min-width:2px;height:30px;position:absolute;bottom: 0;left:<%= (comment.created_at.to_i.to_f - started.to_f) / duration.to_f * 100 %>%">
-                   </li>
-              <% end %>
-         <% end %>
-       </ol>
-     </button>
-<% else %>
-     <button type="button" class="btn btn-default" style="width:<%= 1 / phase.project.phases.count.to_f * 100 %>%" disabled>
-       <span><%= phase.name %></span>
-     </button>
-<% end %>
+<%
+   unless phase.ideas.empty?
+     started = phase.started_at.to_i
+     last = phase.ideas.sort_by{|i| i.created_at}.last.created_at.to_i
+     duration = (last - started) > 60*60*24*30 ? last - started : 60*60*24*30
+     get_left_for = lambda {|x| return (x.created_at.to_i.to_f - started.to_f) / duration.to_f * 100}
+   end
+%>
+<div class="phase-container progress-bar
+  <% if phase.completed? %>completed<% end %>
+  <% if phase.started? %>started<% end %>">
+
+  <a class="phase-name" title="<%= phase.name %>" href="#phase-<%= phase.id %>">
+    <%= phase.name %>
+  </a>
+
+  <a class="tooth phase" title="<%= phase.description %>" href="#phase-<%= phase.id %>">
+    <span class="sr-only"><%= phase.description %></span>
+    <span class="tooth-icon icon-leaf"></span>
+  </a>
+
+  <% phase.ideas.each do |idea| %>
+    <a class="tooth idea" title="<%= idea.text %>" href="#idea-<%= idea.id %>"
+       style="left: <%= get_left_for.call idea %>%">
+      <span class="sr-only"><%= idea.text %></span>
+      <span class="tooth-icon icon-bug"></span>
+    </a>
+
+    <% idea.comments.each do |comment| %>
+      <a class="tooth comment" title="<%= comment.text %>" href="#comment-<%= comment.id %>"
+         style="left: <%= get_left_for.call comment %>%">
+        <span class="sr-only"><%= comment.text %></span>
+        <span class="tooth-icon icon-comment"></span>
+      </a>
+    <% end %>
+  <% end %>
+
+  <% phase.resources.each do |resource| %>
+    <a class="tooth resource" title="<%= resource.name %>" href="#resource-<%= resource.id %>"
+       style="left: <%= get_left_for.call resource %>%">
+      <span class="sr-only"><%= resource.name %></span>
+      <span class="tooth-icon icon-link"></span>
+    </a>
+  <% end %>
+</div>
