--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -18,12 +18,9 @@
 <% end %>
 </ul>
 
-<br/>
-<div class="btn-group" style="width:100%; margin-top: 50px;">
+<div class="phases project-phases comb progress">
   <%= render partial: 'projects/phase', :collection => @project.phases, :as => :phase %>
 </div>
-<br/>
-<br/>
 
 <ol class="phases project-phases timeline list-unstyled">
   <li class="timeline-axis"></li>
