--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -102,7 +102,7 @@ hr:after {
     }
 
     .tooth.idea {
-      border-left: 2px dotted #71ccec;
+      border-left: 2px solid #71ccec;
       height: 120%;
 
       .tooth-icon {
@@ -111,7 +111,7 @@ hr:after {
     }
 
     .tooth.comment {
-      border-left: 1px dotted #df7c79;
+      border-left: 1px solid #df7c79;
       height: 80%;
 
       .tooth-icon {
@@ -120,8 +120,8 @@ hr:after {
     }
 
     .tooth.resource {
-      border-left: 1px dotted rosybrown;
-      height: 50%;
+      border-left: 1px solid rosybrown;
+      height: 60%;
 
       .tooth-icon {
         color: rosybrown;
@@ -179,7 +179,7 @@ hr:after {
   }
 }
 
-.ideas {
+.timeline.ideas {
   position: relative;
 
   > .timeline-axis {
@@ -218,7 +218,7 @@ hr:after {
   }
 }
 
-.comments {
+.timeline.comments {
   position: relative;
 
   > .timeline-axis {
@@ -273,7 +273,7 @@ hr:after {
   }
 }
 
-.resources {
+.timeline.resources {
   position: relative;
 
   > .timeline-axis {
