Changed color of comb phase links.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -53,6 +53,7 @@ hr:after {
     .phase-name {
       border-bottom: 1px solid #79dfaf;
       padding-top: 2px;
+      color: #999;
 
       position: absolute;
       left: 0;
