--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,17 +1,8 @@
-(function () {
-     var errors = <%= raw @comment.errors.full_messages %>,
-         html = "<%=j render partial: 'comments/comment', object: @comment %>",
-         $form = $('#comment-form'),
-         $comments = $('#comments'),
-         $textarea = $form.find('textarea');
-     $('.alert').remove();
-     if (errors.length) {
-          $.each(errors, function (i, m) {
-               $form.append('<div class="alert alert-error"><strong>Error!</strong> ' + m + '</div>');
-          });
-     } else {
-          $comments.append(html);
-          $textarea.val('');
-     }
-     $textarea.focus();
-})();
+$comment = $('<%=j render partial: 'comments/comment', object: @comment %>');
+<% if !@idea.nil? %>
+$comment.insertBefore(".ideas[data-idea='<%= @idea.id %>'] .comment:last-child");
+<% elsif !@phase.nil? %>
+$comment.insertBefore(".phases[data-phase='<%= @phase.id %>'] .comment:last-child");
+<% elsif !@project.nil? %>
+$comment.insertBefore(".projects[data-project='<%= @project.id %>'] .comment:last-child");
+<% end %>
