--- a/app/views/ideas/_idea.html.erb
+++ b/app/views/ideas/_idea.html.erb
@@ -1,9 +1,7 @@
 <li id="idea-<%= idea.id %>" class="idea" data-id="<%= idea.id %>">
-  <!--<%= link_to image_tag('user@2x.png'), user_path(idea.user), {:class => 'idea-user thumbnail pull-left'} %>-->
-
   <h4>
     <%= link_to idea.text, project_phase_idea_path(idea.phase.project, idea.phase, idea) %> -
-    <small><%= link_to idea.user.email, user_path(idea.user) %></small>
+    <small><%= link_to idea.user.display_name, user_path(idea.user) %></small>
     <span class="idea-votes pull-right">
       <small class="idea-vote-for"><%= idea.votes_for %></small>
       <small class="idea-vote-up">
@@ -20,25 +18,23 @@
     <span class="idea-icon icon-bug"></span>
   </h4>
 
-  <ol class="idea-comments comments timeline list-unstyled">
+  <ul data-idea="<%= idea.id %>" class="resources phase-resources timeline list-unstyled">
+    <%= render partial: 'resources/resource', :collection => idea.resources, :as => :resource %>
+  </ul>
+
+  <ol data-idea="<%= idea.id %>" class="ideas comments timeline list-unstyled">
     <li class="timeline-axis"></li>
-    <% idea.comments.each do |comment| %>
-      <li id="comment-<%= comment.id %>" data-id="<%= comment.id %>" class="comment">
-        <!--<%= link_to image_tag('user@2x.png'), user_path(comment.user), {:class => 'comment-author thumbnail pull-right'} %>-->
-        <p class="comment-text">
-          <%= comment.text %> -
-          <%= link_to comment.user.email, user_path(comment.user) %>
-          <span class="comment-icon icon-comment"></span>
-        </p>
-      </li>
-    <% end %>
+    <%= render partial: 'comments/comment', :collection => idea.comments, :as => :comment %>
+    <% if user_signed_in? %>
       <li class="comment create">
-        <!--<%= image_tag 'user@2x.png', {:class => 'comment-author thumbnail pull-right'} %>-->
-        <%= form_for Comment.new, :url => new_project_phase_idea_comment_path(idea.phase.project, idea.phase, idea), :remote => true, :html => {id: 'phase-comment'} do |f| %>
+        <%= form_for Comment.new,
+                     :url => idea_comments_path(idea.id),
+                     :remote => true do |f| %>
           <%= f.text_field :text, :placeholder => 'I think this is...', :class => 'form-control' %>
           <span class="comment-icon icon-comment"></span>
           <span class="comment-icon comment-create-icon icon-plus"></span>
         <% end %>
       </li>
+    <% end %>
   </ol>
 </li>
